Core: Added unit tests for requesting representations after InviwoApplication has been created and destroyed once.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -800,7 +800,10 @@ set(TEST_FILES
     tests/unittests/volumesequenceutils-tests.cpp
     tests/unittests/zip-test.cpp
 )
+# Default inviwo unit tests run after InviwoApplication initialization
 ivw_add_unittest(${TEST_FILES})
+# Tests for initialization/deinitialization of InviwoApplication 
+add_subdirectory(tests/unittests/without-initialization)
 
 set(GEN_FILES
     ${CMAKE_CURRENT_BINARY_DIR}/include/inviwo/core/common/coremodulesharedlibrary.h
