--- a/tools/meta/CMakeLists.txt
+++ b/tools/meta/CMakeLists.txt
@@ -58,7 +58,7 @@ add_library(inviwo-meta ${sources} ${headers})
 add_library(inviwo::meta ALIAS inviwo-meta)
 target_include_directories(inviwo-meta PUBLIC include)
 target_compile_features(inviwo-meta PUBLIC cxx_std_17)
-set_target_properties(inviwo-meta PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON CXX_EXTENSIONS OFF)
+set_target_properties(inviwo-meta PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON CXX_EXTENSIONS OFF FOLDER tools)
 ivw_define_standard_properties(inviwo-meta)
 ivw_define_standard_definitions(${PROJECT_NAME} inviwo-meta)
 
@@ -120,6 +120,7 @@ if(IVW_APP_META_CLI)
         inviwo::meta
         inviwo::tclap
     )
+    set_target_properties(inviwo-meta-cli PROPERTIES FOLDER tools)
 endif()
 
 # Add testing
