--- a/modules/basegl/CMakeLists.txt
+++ b/modules/basegl/CMakeLists.txt
@@ -104,6 +104,7 @@ set(HEADER_FILES
     include/modules/basegl/shadercomponents/positionindicatorcomponent.h
     include/modules/basegl/shadercomponents/raycastingcomponent.h
     include/modules/basegl/shadercomponents/sampletransformcomponent.h
+    include/modules/basegl/shadercomponents/segmentsurfacecomponent.h
     include/modules/basegl/shadercomponents/shadercomponent.h
     include/modules/basegl/shadercomponents/sphericalcomponent.h
     include/modules/basegl/shadercomponents/tfcomponent.h
@@ -221,6 +222,7 @@ set(SOURCE_FILES
     src/shadercomponents/positionindicatorcomponent.cpp
     src/shadercomponents/raycastingcomponent.cpp
     src/shadercomponents/sampletransformcomponent.cpp
+    src/shadercomponents/segmentsurfacecomponent.cpp
     src/shadercomponents/shadercomponent.cpp
     src/shadercomponents/sphericalcomponent.cpp
     src/shadercomponents/tfcomponent.cpp
