--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "modules/eigenutils/ext/eigen"]
-    path = modules/eigenutils/ext/eigen
-    url = https://github.com/eigenteam/eigen-git-mirror.git
 [submodule "modules/hdf5/ext/hdf5"]
     path = modules/hdf5/ext/hdf5
     url = https://github.com/HDFGroup/hdf5.git
@@ -46,3 +43,6 @@
 [submodule "ext/units/units"]
 	path = ext/units/units
 	url = https://github.com/LLNL/units.git
+[submodule "modules/eigenutils/ext/eigengitlab"]
+	path = modules/eigenutils/ext/eigengitlab
+	url = https://gitlab.com/libeigen/eigen.git
