--- a/modules/eigenutils/CMakeLists.txt
+++ b/modules/eigenutils/CMakeLists.txt
@@ -31,20 +31,20 @@ ivw_compile_optimize_on_target(inviwo-module-eigenutils)
 option(IVW_USE_EXTERNAL_EIGEN "Eigen is provided externaly" OFF)
 if(NOT IVW_USE_EXTERNAL_EIGEN)
     target_include_directories(inviwo-module-eigenutils PUBLIC 
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/ext/eigen>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/ext/eigengitlab>
     )
     #  HACK: have the files showing in the IDE, under the name 'eigen'
-    file(GLOB_RECURSE EIGEN_SOURCES "ext/eigen/Eigen/*")
-    ivw_group("Header Files" BASE "${CMAKE_CURRENT_SOURCE_DIR}/ext/eigen/Eigen" ${EIGEN_SOURCES})
+    file(GLOB_RECURSE EIGEN_SOURCES "ext/eigengitlab/Eigen/*")
+    ivw_group("Header Files" BASE "${CMAKE_CURRENT_SOURCE_DIR}/ext/eigengitlab/Eigen" ${EIGEN_SOURCES})
     add_custom_target(eigen_dummy SOURCES ${EIGEN_SOURCES})
 
     # Creates VS folder structure
     ivw_folder(eigen_dummy ext)
-    ivw_register_license_file(NAME Eigen VERSION 3.3.90 MODULE EigenUtils
+    ivw_register_license_file(NAME Eigen VERSION 3.4.90 MODULE EigenUtils
         URL http://eigen.tuxfamily.org/
         TYPE "Mozilla Public License Version 2.0"
-        FILES ${CMAKE_CURRENT_SOURCE_DIR}/ext/eigen/COPYING.README
-              ${CMAKE_CURRENT_SOURCE_DIR}/ext/eigen/COPYING.MPL2
+        FILES ${CMAKE_CURRENT_SOURCE_DIR}/ext/eigengitlab/COPYING.README
+              ${CMAKE_CURRENT_SOURCE_DIR}/ext/eigengitlab/COPYING.MPL2
     ) 
 else()
     find_package(Eigen3 REQUIRED)
