Python3: LayerPy representation

--- a/modules/python3/CMakeLists.txt
+++ b/modules/python3/CMakeLists.txt
@@ -4,6 +4,7 @@ ivw_module(Python3)
 find_package(Python3 COMPONENTS Interpreter Development NumPy REQUIRED)
 
 set(HEADER_FILES
+    include/modules/python3/layerpy.h
     include/modules/python3/processors/numpymandelbrot.h
     include/modules/python3/processors/numpymeshcreatetest.h
     include/modules/python3/processors/numpyvolume.h
@@ -28,6 +29,7 @@ set(HEADER_FILES
 ivw_group("Header Files" ${HEADER_FILES})
 
 set(SOURCE_FILES
+    src/layerpy.cpp
     src/processors/numpymandelbrot.cpp
     src/processors/numpymeshcreatetest.cpp
     src/processors/numpyvolume.cpp
@@ -98,7 +100,7 @@ if(TARGET inviwo-unittests-python3)
 endif()
 
 # Add Python to package
-option(IVW_PACKAGE_EMBED_PYTHON "Embed a python dist in the installer.\ 
+option(IVW_PACKAGE_EMBED_PYTHON "Embed a python dist in the installer.\ 
  Otherwise a existing python installation is needed to run inviwo" ON)
 if(BUILD_SHARED_LIBS AND IVW_PACKAGE_EMBED_PYTHON)
     if(WIN32)
