Base,GLFW,DataFrame,WebBrowser: warn fixes
* std::codecvt_utf8 has been deprecated in C++20

--- a/modules/glfw/CMakeLists.txt
+++ b/modules/glfw/CMakeLists.txt
@@ -27,6 +27,11 @@ ivw_group("Source Files" ${SOURCE_FILES})
 # Create module
 ivw_create_module(${SOURCE_FILES} ${HEADER_FILES})
 
+find_package(utf8cpp CONFIG REQUIRED)
+target_link_libraries(inviwo-module-glfw PRIVATE
+    utf8cpp
+)
+
 option(IVW_USE_EXTERNAL_GLFW "GLFW is provided externaly" OFF)
 if(NOT IVW_USE_EXTERNAL_GLFW)
     add_subdirectory(ext/glfw)
