--- a/modules/python3/bindings/CMakeLists.txt
+++ b/modules/python3/bindings/CMakeLists.txt
@@ -1,8 +1,8 @@
 # Create python module
 set(HEADER_FILES
     include/inviwopy/inviwopy.h
-    include/inviwopy/pybuffer.h
     include/inviwopy/pybitset.h
+    include/inviwopy/pybuffer.h
     include/inviwopy/pycamera.h
     include/inviwopy/pycameraproperty.h
     include/inviwopy/pycompositeproperties.h
@@ -14,7 +14,15 @@ set(HEADER_FILES
     include/inviwopy/pyevent.h
     include/inviwopy/pyflags.h
     include/inviwopy/pyglmmattypes.h
+    include/inviwopy/pyglmmattypesdouble.h
+    include/inviwopy/pyglmmattypesfloat.h
+    include/inviwopy/pyglmmattypesint.h
+    include/inviwopy/pyglmmattypesuint.h
     include/inviwopy/pyglmports.h
+    include/inviwopy/pyglmportsdouble.h
+    include/inviwopy/pyglmportsfloat.h
+    include/inviwopy/pyglmportsint.h
+    include/inviwopy/pyglmportsuint.h
     include/inviwopy/pyglmtypes.h
     include/inviwopy/pyimage.h
     include/inviwopy/pyinviwoapplication.h
@@ -30,26 +38,35 @@ set(HEADER_FILES
     include/inviwopy/pypropertytypehook.h
     include/inviwopy/pytfprimitiveset.h
     include/inviwopy/pyvolume.h
+    include/inviwopy/util/pyglmhelper.h
     include/inviwopy/vectoridentifierwrapper.h
 )
 ivw_group("Header Files" BASE ${CMAKE_CURRENT_SOURCE_DIR}/include/inviwopy ${HEADER_FILES})
 
 set(SOURCE_FILES
     src/inviwopy.cpp
-    src/pybuffer.cpp
     src/pybitset.cpp
+    src/pybuffer.cpp
     src/pycamera.cpp
     src/pycameraproperty.cpp
     src/pycompositeproperties.cpp
     src/pydataformat.cpp
     src/pydatamapper.cpp
-    src/pydocument.cpp
     src/pydatareaders.cpp
     src/pydatawriters.cpp
+    src/pydocument.cpp
     src/pyevent.cpp
     src/pyflags.cpp
     src/pyglmmattypes.cpp
+    src/pyglmmattypesdouble.cpp
+    src/pyglmmattypesfloat.cpp
+    src/pyglmmattypesint.cpp
+    src/pyglmmattypesuint.cpp
     src/pyglmports.cpp
+    src/pyglmportsdouble.cpp
+    src/pyglmportsfloat.cpp
+    src/pyglmportsint.cpp
+    src/pyglmportsuint.cpp
     src/pyglmtypes.cpp
     src/pyimage.cpp
     src/pyinviwoapplication.cpp
@@ -65,6 +82,7 @@ set(SOURCE_FILES
     src/pypropertytypehook.cpp
     src/pytfprimitiveset.cpp
     src/pyvolume.cpp
+    src/util/pyglmhelper.cpp
     src/vectoridentifierwrapper.cpp
 )
 ivw_group("Source Files" ${SOURCE_FILES})
