--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -68,6 +68,7 @@ jobs:
       if: runner.os == 'macOS'
       run: |
         brew install ninja mono pkg-config
+        xcode-select --switch /Applications/Xcode_14.3.app/Contents/Developer
 
     - name: Apt Install, switch to gcc-12
       shell: bash
