--- a/modules/qtwidgets/CMakeLists.txt
+++ b/modules/qtwidgets/CMakeLists.txt
@@ -39,6 +39,7 @@ set(HEADER_FILES
     ${MOC_FILES}
     include/modules/qtwidgets/codeedit.h
     include/modules/qtwidgets/editorfileobserver.h
+    include/modules/qtwidgets/editorsettings.h
     include/modules/qtwidgets/eventconverterqt.h
     include/modules/qtwidgets/inviwoqtutils.h
     include/modules/qtwidgets/keyboardutils.h
@@ -101,6 +102,7 @@ set(SOURCE_FILES
     src/customdoublespinboxqt.cpp
     src/editablelabelqt.cpp
     src/editorfileobserver.cpp
+    src/editorsettings.cpp
     src/eventconverterqt.cpp
     src/filepathlineeditqt.cpp
     src/inviwodockwidget.cpp
