Animation: Added a AnimationRecorder abstraction WIP

--- a/modules/animation/CMakeLists.txt
+++ b/modules/animation/CMakeLists.txt
@@ -45,6 +45,8 @@ set(HEADER_FILES
     include/modules/animation/demo/democontrollerobserver.h
     include/modules/animation/factories/interpolationfactory.h
     include/modules/animation/factories/interpolationfactoryobject.h
+    include/modules/animation/factories/recorderfactories.h
+    include/modules/animation/factories/recorderfactory.h
     include/modules/animation/factories/trackfactory.h
     include/modules/animation/factories/trackfactoryobject.h
     include/modules/animation/interpolation/cameralinearinterpolation.h
@@ -99,6 +101,8 @@ set(SOURCE_FILES
     src/demo/democontrollerobserver.cpp
     src/factories/interpolationfactory.cpp
     src/factories/interpolationfactoryobject.cpp
+    src/factories/recorderfactories.cpp
+    src/factories/recorderfactory.cpp
     src/factories/trackfactory.cpp
     src/factories/trackfactoryobject.cpp
     src/interpolation/cameralinearinterpolation.cpp
