--- a/modules/hdf5/CMakeLists.txt
+++ b/modules/hdf5/CMakeLists.txt
@@ -109,7 +109,8 @@ if (NOT IVW_USE_EXTERNAL_HDF5)
     ivw_default_install_targets(${h5-targets})
 
 else()
-    find_package(hdf5 REQUIRED)
+    # Try vcpkg-provided Findhdf5
+    find_package(hdf5 QUIET)
     if(HDF5_FOUND)
         if(BUILD_SHARED_LIBS)
             target_link_libraries(inviwo-module-hdf5
@@ -131,6 +132,7 @@ else()
         ivw_vcpkg_install(hdf5 MODULE HDF5)
         set(version ${HDF5_VERSION_STRING})
     else()
+        # Try cmake standard FindHDF5
         if(NOT BUILD_SHARED_LIBS)
            set(HDF5_USE_STATIC_LIBRARIES ON)
         endif()
