Ext/Core: Remove tinydir, no longer used.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -390,7 +390,6 @@ set(HEADER_FILES
     ${IVW_INCLUDE_DIR}/inviwo/core/util/threadpool.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/threadutil.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/timer.h
-    ${IVW_INCLUDE_DIR}/inviwo/core/util/tinydirinterface.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/transformiterator.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/typetraits.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/unindent.h
@@ -736,7 +735,6 @@ set(SOURCE_FILES
     util/threadpool.cpp
     util/threadutil.cpp
     util/timer.cpp
-    util/tinydirinterface.cpp
     util/typetraits.cpp
     util/unindent.cpp
     util/utilities.cpp
@@ -872,7 +870,7 @@ target_link_libraries(inviwo-core
         $<$<BOOL:${UNIX}>:${CMAKE_DL_LIBS}>  # Required for dlopen
         $<$<BOOL:${WIN32}>:inviwo::stackwalker>
         $<$<BOOL:${APPLE}>:${CORESERVICES_LIBRARY}>
-        inviwo::tinydir
+        $<$<BOOL:${IVW_USE_TRACY}>:inviwo::tracy>
         units::units
     PRIVATE
         roaring::roaring
