--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -13,6 +13,7 @@ jobs:
   build:
     strategy:
       matrix:
+        # for now macos-latest == macos-12 since macos-13 is still "beta"
         os: [windows-latest, macos-13, ubuntu-22.04]
         include:
           - os: 'windows-latest'
@@ -66,6 +67,7 @@ jobs:
     - name: Brew Install
       shell: bash
       if: runner.os == 'macOS'
+      # xcode 14.2 is currently default. 
       run: |
         brew install ninja mono pkg-config
         sudo xcode-select --switch /Applications/Xcode_14.3.app/Contents/Developer
