--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -24,7 +24,7 @@ jobs:
             targets: 'ALL_BUILD DOXY-Inviwo DOXY-Python package'
             installer: 'inviwo-installer-win'
             artifact: 'build/inviwo-v*.exe'
-            cache: 'sccache'
+            cache: 'ccache'
           - os: 'macos-13'
             triplet: 'x64-osx'
             mono: 'mono'
