--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -83,11 +83,7 @@ jobs:
         sudo apt install --fix-missing libxinerama-dev libxcursor-dev xorg-dev libglu1-mesa-dev libglew-dev ninja-build gcc-12 g++-12
         sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-12 120 --slave /usr/bin/g++ g++ /usr/bin/g++-12 --slave /usr/bin/gcov gcov /usr/bin/gcov-12
         sudo update-alternatives --set gcc /usr/bin/gcc-12
-        
-    #- name: Setup tmate session
-    #  uses: mxschmitt/action-tmate@v3
-    #  timeout-minutes: 60
-    
+            
     - name: Setup Python
       uses: actions/setup-python@v4
       with:
@@ -156,6 +152,12 @@ jobs:
           inviwo-${{ matrix.triplet }}-${{ env.BUILD_TYPE }}-refs/heads/master
           inviwo-${{ matrix.triplet }}-${{ env.BUILD_TYPE }}-
 
+    - name: Test
+      shell: bash |
+        which ccache
+        ls -al C:/ProgramData/chocolatey/bin/ccache.exe
+        cut C:/ProgramData/chocolatey/bin/ccache.exe
+
     - name: Configure CMake
       shell: bash
       run: >
@@ -168,6 +170,10 @@ jobs:
 
     - name: Setup C++ Log matchers
       uses: Trass3r/setup-cpp@v1
+
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
+      timeout-minutes: 15
 
     - name: Build
       timeout-minutes: 360
