--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -114,6 +114,7 @@ jobs:
       with:
         python-version: '>=3.10'
         architecture: 'x64'
+        cache: 'pip'
     
     - name: Install Python Modules 
       shell: bash
