--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -121,6 +121,7 @@ jobs:
         python-version: '>=3.10'
         architecture: 'x64'
         cache: 'pip'
+        cache-dependency-path: 'inviwo/requirements.txt'
     
     - name: Install Python Modules 
       shell: bash
